--- a/style/default.css
+++ b/style/default.css
@@ -5,6 +5,11 @@
     box-sizing: border-box;
 }
 
+a {
+    color: rgb(29, 29, 31);
+    text-decoration: none;
+}
+
 img {
     max-width: 100%;
     height: auto;
