--- a/style/main.css
+++ b/style/main.css
@@ -18,10 +18,12 @@ p {
 
 .global-nav {
     height: 44px;
+    padding: 0 1rem;
 }
 
 .local-nav {
     height: 52px;
+    padding: 0 1rem;
     border-bottom: 1px solid #ddd;
 }
 
@@ -50,4 +52,133 @@ p {
 
 .local-nav-links > a:not(.product-name) {
     margin-left: 2em;
+}
+
+.scroll-section {
+    padding-top: 50vh;
+}
+
+#scroll-section-0 h1 {
+    font-size: 4rem;
+    text-align: center;
+}
+
+.main-message {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 3em;
+    font-size: 2.5rem;
+
+    margin: 5px 0;
+}
+
+.main-message p {
+    text-align: center;
+    font-weight: bold;
+    line-height: 1.2;
+}
+
+.main-message small {
+    display: block;
+    margin-bottom: 0.5em;
+    font-size: 1.2rem;
+}
+
+#scoll-section-2 .main-message {
+    font-size: 3.5rem;
+}
+
+.description {
+    padding: 0 1rem;
+    font-size: 1.2rem;
+    color: #888;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.description strong {
+    float: left;
+    margin-right: 0.2em;
+    font-size: 3rem;
+    color: rgb(29, 29, 31);
+}
+
+.desc-message {
+    width: 50%;
+    font-weight: bold;
+}
+
+.pin {
+    width: 1px;
+    height: 100px;
+    background-color: rgb(29, 29, 31);
+}
+
+.mid-message {
+    padding: 0 1rem;
+    font-size: 2rem;
+    color: #888;
+    width: 1000px;
+    margin: 0 auto;
+}
+
+.mid-message strong {
+    color: rgb(29, 29, 31);
+}
+
+.canvas-caption {
+    width: 1000px;
+    margin: 0 auto;
+    padding: 0 1rem;
+    font-size: 1.2rem;
+    color: #888;
+}
+
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    height: 7rem;
+    color: white;
+    background-color: #888;
+}
+
+@media (min-width: 1024px) {
+    #scroll-section-0 h1 {
+        font-size: 9vw;
+    }
+
+    .main-message {
+        font-size: 4vw;
+    }
+
+    .description {
+        font-size: 2rem;
+    }
+
+    .description strong {
+        font-size: 6rem;
+    }
+
+    #scroll-section-2 .main-message {
+        font-size: 6vw;
+    }
+
+    .main-message small {
+        font-size: 1.5vw;
+    }
+
+    .desc-message {
+        width: 20%;
+    }
+
+    .mid-message {
+        font-size: 4vw;
+    }
+
+    .canvas-caption {
+        font-size: 2rem;
+    }
 }
