--- a/style/main.css
+++ b/style/main.css
@@ -17,11 +17,19 @@ p {
 }
 
 .global-nav {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 44px;
     padding: 0 1rem;
 }
 
 .local-nav {
+    position: absolute;
+    top: 44px;
+    left: 0;
+    width: 100%;
     height: 52px;
     padding: 0 1rem;
     border-bottom: 1px solid #ddd;
