--- a/style/main.css
+++ b/style/main.css
@@ -75,6 +75,7 @@ p {
     display: flex;
     align-items: center;
     justify-content: center;
+    top: 35vh;
     height: 3em;
     font-size: 2.5rem;
     opacity: 0;
@@ -163,7 +164,6 @@ p {
 .sticky-elem {
     display: none;
     position: fixed;
-    top: 0;
     left: 0;
     width: 100%;
 }
