--- a/style/main.css
+++ b/style/main.css
@@ -124,6 +124,16 @@ p {
     background-color: rgb(29, 29, 31);
 }
 
+#scroll-section-2 .b {
+    top: 10%;
+    left: 40%;
+}
+
+#scroll-section-2 .c {
+    top: 15%;
+    left: 45%;
+}
+
 .mid-message {
     padding: 0 1rem;
     font-size: 2rem;
@@ -196,7 +206,13 @@ p {
     .desc-message {
         width: 20%;
     }
-
+    #scroll-section-2 .b {
+        top: 20%;
+        left: 53%;
+    }
+    #scroll-section-2 .c {
+        left: 55%;
+    }
     .mid-message {
         font-size: 4vw;
     }
