--- a/style/main.css
+++ b/style/main.css
@@ -1,223 +1,230 @@
 @charset 'utf-8';
 
 html {
-    font-family: "Noto Sans KR", sans-serif;
-    font-size: 14px;
+  font-family: "Noto Sans KR", sans-serif;
+  font-size: 14px;
 }
 
 body {
-    overflow-x: hidden;
-    color: rgb(29, 29, 31);
-    letter-spacing: -0.05em;
-    background: white;
+  overflow-x: hidden;
+  color: rgb(29, 29, 31);
+  letter-spacing: -0.05em;
+  background: white;
 }
 
 p {
-    line-height: 1.6;
+  line-height: 1.6;
 }
 
 .global-nav {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 44px;
-    padding: 0 1rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  width: 100%;
+  height: 44px;
+  padding: 0 1rem;
 }
 
 .local-nav {
-    position: absolute;
-    top: 44px;
-    left: 0;
-    width: 100%;
-    height: 52px;
-    padding: 0 1rem;
-    border-bottom: 1px solid #ddd;
+  position: absolute;
+  top: 45px;
+  left: 0;
+  z-index: 11;
+  width: 100%;
+  height: 52px;
+  padding: 0 1rem;
+  border-bottom: 1px solid #ddd;
 }
 
 .global-nav-links,
 .local-nav-links {
-    display: flex;
-    align-items: center;
-    max-width: 1000px;
-    height: 100%;
-    margin: 0 auto;
+  display: flex;
+  align-items: center;
+  max-width: 1000px;
+  height: 100%;
+  margin: 0 auto;
 }
 
 .global-nav-links {
-    justify-content: space-between;
+  justify-content: space-between;
 }
 
 .local-nav-links .product-name {
-    margin-right: auto;
-    font-size: 1.4rem;
-    font-weight: bold;
+  margin-right: auto;
+  font-size: 1.4rem;
+  font-weight: bold;
 }
 
 .local-nav-links > a {
-    font-size: 0.8rem;
+  font-size: 0.8rem;
 }
 
 .local-nav-links > a:not(.product-name) {
-    margin-left: 2em;
+  margin-left: 2em;
 }
 
 .scroll-section {
-    padding-top: 50vh;
+  padding-top: 50vh;
 }
 
 #scroll-section-0 h1 {
-    font-size: 4rem;
-    text-align: center;
+  font-size: 4rem;
+  text-align: center;
 }
 
 .main-message {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    top: 35vh;
-    height: 3em;
-    font-size: 2.5rem;
-    opacity: 0;
-    margin: 5px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 35vh;
+  height: 3em;
+  font-size: 2.5rem;
+  opacity: 0;
+  margin: 5px 0;
 }
 
 .main-message p {
-    text-align: center;
-    font-weight: bold;
-    line-height: 1.2;
+  text-align: center;
+  font-weight: bold;
+  line-height: 1.2;
 }
 
 .main-message small {
-    display: block;
-    margin-bottom: 0.5em;
-    font-size: 1.2rem;
+  display: block;
+  margin-bottom: 0.5em;
+  font-size: 1.2rem;
 }
 
 #scoll-section-2 .main-message {
-    font-size: 3.5rem;
+  font-size: 3.5rem;
 }
 
 .description {
-    padding: 0 1rem;
-    font-size: 1.2rem;
-    color: #888;
-    max-width: 1000px;
-    margin: 0 auto;
+  padding: 0 1rem;
+  font-size: 1.2rem;
+  color: #888;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
 .description strong {
-    float: left;
-    margin-right: 0.2em;
-    font-size: 3rem;
-    color: rgb(29, 29, 31);
+  float: left;
+  margin-right: 0.2em;
+  font-size: 3rem;
+  color: rgb(29, 29, 31);
 }
 
 .desc-message {
-    width: 50%;
-    font-weight: bold;
+  width: 50%;
+  font-weight: bold;
 }
 
 .pin {
-    width: 1px;
-    height: 100px;
-    background-color: rgb(29, 29, 31);
+  width: 1px;
+  height: 100px;
+  background-color: rgb(29, 29, 31);
 }
 
 #scroll-section-2 .b {
-    top: 10%;
-    left: 40%;
+  top: 10%;
+  left: 40%;
 }
 
 #scroll-section-2 .c {
-    top: 15%;
-    left: 45%;
+  top: 15%;
+  left: 45%;
 }
 
 .mid-message {
-    padding: 0 1rem;
-    font-size: 2rem;
-    color: #888;
-    width: 1000px;
-    margin: 0 auto;
+  padding: 0 1rem;
+  font-size: 2rem;
+  color: #888;
+  width: 1000px;
+  margin: 0 auto;
 }
 
 .mid-message strong {
-    color: rgb(29, 29, 31);
+  color: rgb(29, 29, 31);
 }
 
 .canvas-caption {
-    width: 1000px;
-    margin: 0 auto;
-    padding: 0 1rem;
-    font-size: 1.2rem;
-    color: #888;
+  width: 1000px;
+  margin: 0 auto;
+  padding: 0 1rem;
+  font-size: 1.2rem;
+  color: #888;
 }
 
 .footer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-    height: 7rem;
-    color: white;
-    background-color: #888;
+  height: 7rem;
+  color: white;
+  background-color: #888;
 }
 
 #show-scene-0 #scroll-section-0 .sticky-elem,
 #show-scene-1 #scroll-section-1 .sticky-elem,
 #show-scene-2 #scroll-section-2 .sticky-elem,
 #show-scene-3 #scroll-section-3 .sticky-elem {
-    display: block;
+  display: block;
 }
 
 .sticky-elem {
-    display: none;
-    position: fixed;
-    left: 0;
-    width: 100%;
+  display: none;
+  position: fixed;
+  left: 0;
+  width: 100%;
+}
+
+.sticky-elem-canvas {
+  top: 0;
+  background-color: #ccc;
 }
 
 @media (min-width: 1024px) {
-    #scroll-section-0 h1 {
-        font-size: 9vw;
-    }
+  #scroll-section-0 h1 {
+    font-size: 9vw;
+  }
 
-    .main-message {
-        font-size: 4vw;
-    }
+  .main-message {
+    font-size: 4vw;
+  }
 
-    .description {
-        font-size: 2rem;
-    }
+  .description {
+    font-size: 2rem;
+  }
 
-    .description strong {
-        font-size: 6rem;
-    }
+  .description strong {
+    font-size: 6rem;
+  }
 
-    #scroll-section-2 .main-message {
-        font-size: 6vw;
-    }
+  #scroll-section-2 .main-message {
+    font-size: 6vw;
+  }
 
-    .main-message small {
-        font-size: 1.5vw;
-    }
+  .main-message small {
+    font-size: 1.5vw;
+  }
 
-    .desc-message {
-        width: 20%;
-    }
-    #scroll-section-2 .b {
-        top: 20%;
-        left: 53%;
-    }
-    #scroll-section-2 .c {
-        left: 55%;
-    }
-    .mid-message {
-        font-size: 4vw;
-    }
+  .desc-message {
+    width: 20%;
+  }
+  #scroll-section-2 .b {
+    top: 20%;
+    left: 53%;
+  }
+  #scroll-section-2 .c {
+    left: 55%;
+  }
+  .mid-message {
+    font-size: 4vw;
+  }
 
-    .canvas-caption {
-        font-size: 2rem;
-    }
+  .canvas-caption {
+    font-size: 2rem;
+  }
 }
