feat: apply opacity animation at canvas

--- a/style/main.css
+++ b/style/main.css
@@ -69,6 +69,9 @@ p {
 }
 
 #scroll-section-0 h1 {
+  position: relative;
+  top: -10vh;
+  z-index: 5;
   font-size: 4rem;
   text-align: center;
 }
